# configuration_parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
example/: README.md  example.c  test.config
include/: config.h  config_internal.h  config_parser.h  parser.h  scanner.h  token.h
src/: array.c  config.c  main.c  parser.c  scanner.c  token.c
